# oxideav-workspace

./: .gitignore  Cargo.toml  README.md  run.sh
crates/oxideav-ass/: Cargo.toml
crates/oxideav-ass/src/: codec.rs  container.rs  lib.rs  transform.rs
crates/oxideav-ass/tests/: ass_parse.rs  probe.rs  transform_roundtrip.rs
crates/oxideav-audio-filter/: Cargo.toml
crates/oxideav-audio-filter/src/: echo.rs  fft.rs  lib.rs  noise_gate.rs  resample.rs  sample_convert.rs  volume.rs
crates/oxideav-audio-filter/tests/: spectrogram_sine.rs
crates/oxideav-av1/: Cargo.toml
crates/oxideav-av1/src/: bitreader.rs  decoder.rs  extradata.rs  frame_header.rs  intra.rs  lib.rs  obu.rs  sequence_header.rs  tile_decode.rs  tile_group.rs
crates/oxideav-av1/tests/: reference_clips.rs
crates/oxideav-avif/: Cargo.toml
crates/oxideav-avif/src/: lib.rs
crates/oxideav-basic/: Cargo.toml
crates/oxideav-basic/src/: lib.rs  pcm.rs  slin.rs  wav.rs
crates/oxideav-basic/tests/: slin_roundtrip.rs  wav_seek.rs
crates/oxideav-cli/: Cargo.toml  README.md
crates/oxideav-cli/src/: main.rs
crates/oxideav-cli/tests/: info_engine.rs  no_hwaccel.rs  transcode_multi_stream.rs
crates/oxideav-container/: Cargo.toml
crates/oxideav-container/src/: lib.rs  registry.rs
crates/oxideav-core/: Cargo.toml
crates/oxideav-core/src/: capabilities.rs  error.rs  format.rs  frame.rs  lib.rs  packet.rs  rational.rs  stream.rs  subtitle.rs  time.rs
crates/oxideav-ffv1/: Cargo.toml
crates/oxideav-ffv1/src/: config.rs  decoder.rs  encoder.rs  lib.rs  predictor.rs  range_coder.rs  slice.rs  state.rs
crates/oxideav-ffv1/tests/: roundtrip.rs
crates/oxideav-g711/: Cargo.toml
crates/oxideav-g711/src/: alaw.rs  lib.rs  mulaw.rs  tables.rs
crates/oxideav-g711/tests/: alaw_roundtrip.rs  encode_decode_idempotent_on_expand.rs  mulaw_roundtrip.rs
crates/oxideav-gif/: Cargo.toml
crates/oxideav-gif/src/: container.rs  decoder.rs  encoder.rs  lib.rs  lzw.rs
crates/oxideav-gif/tests/: animated_gif.rs  lzw_roundtrip.rs  probe.rs  static_gif_roundtrip.rs
crates/oxideav-h263/: Cargo.toml
crates/oxideav-h263/src/: bitwriter.rs  block.rs  dct.rs  decoder.rs  enc_tables.rs  encoder.rs  gob.rs  interp.rs  lib.rs  mb.rs  motion.rs  picture.rs  start_code.rs
crates/oxideav-h263/tests/: encoder_roundtrip.rs  mp4_3gp_iframe.rs  p_picture_roundtrip.rs  reference_clip.rs
crates/oxideav-h264/: Cargo.toml
crates/oxideav-h264/src/: bitreader.rs  cavlc.rs  deblock.rs  decoder.rs  intra_pred.rs  lib.rs  mb.rs  mb_type.rs  nal.rs  picture.rs  pps.rs  slice.rs  sps.rs  tables.rs  transform.rs
crates/oxideav-h264/tests/: cabac_iframe.rs  decode_iframe.rs  reference_clips.rs
crates/oxideav-job/: Cargo.toml
crates/oxideav-job/src/: dag.rs  executor.rs  lib.rs  pipeline.rs  schema.rs  sinks.rs  validate.rs
crates/oxideav-job/tests/: executor_wav_roundtrip.rs  pix_convert.rs
crates/oxideav-jpeg2000/: Cargo.toml
crates/oxideav-jpeg2000/src/: lib.rs
crates/oxideav-jpegxl/: Cargo.toml
crates/oxideav-jpegxl/src/: lib.rs
crates/oxideav-mp3/: Cargo.toml
crates/oxideav-mp3/src/: analysis.rs  bitwriter.rs  container.rs  decoder.rs  encoder.rs  frame.rs  huffman.rs  imdct.rs  lib.rs  mdct.rs  requantize.rs  reservoir.rs  scalefactor.rs  sfband.rs  sideinfo.rs  synthesis.rs  window.rs
crates/oxideav-mp3/tests/: encoder_roundtrip.rs  pipeline_comparison.rs  reference_clips.rs
crates/oxideav-mp4/: Cargo.toml
crates/oxideav-mp4/src/: codec_id.rs  demux.rs  lib.rs  muxer.rs  options.rs  sample_entries.rs
crates/oxideav-mp4/tests/: mux_roundtrip.rs
crates/oxideav-opus/: Cargo.toml
crates/oxideav-opus/src/: decoder.rs  encoder.rs  header.rs  lib.rs  toc.rs
crates/oxideav-opus/tests/: encoder_roundtrip.rs  roundtrip.rs
crates/oxideav-pipeline/: Cargo.toml
crates/oxideav-pipeline/src/: lib.rs
crates/oxideav-pixfmt/: Cargo.toml
crates/oxideav-pixfmt/src/: convert.rs  dither.rs  format_info.rs  gray.rs  lib.rs  pal8.rs  palette.rs  rgb.rs  yuv.rs
crates/oxideav-pixfmt/tests/: conversions.rs  palette.rs  yuv_rgb.rs
crates/oxideav-png/: Cargo.toml
crates/oxideav-png/src/: apng.rs  chunk.rs  container.rs  decoder.rs  encoder.rs  filter.rs  lib.rs
crates/oxideav-png/tests/: apng_roundtrip.rs  container_probe.rs  crc_validation.rs  decode_encode_roundtrip.rs
crates/oxideav-speex/: Cargo.toml
crates/oxideav-speex/src/: bitwriter.rs  codec.rs  decoder.rs  encoder.rs  exc_tables.rs  gain_tables.rs  lib.rs  lsp.rs  lsp_tables_nb.rs  nb_decoder.rs  nb_encoder.rs  submodes.rs  wb_encoder.rs
crates/oxideav-speex/tests/: decode_nb.rs  encode_nb.rs  encode_wb.rs
crates/oxideav-sub-image/: Cargo.toml
crates/oxideav-sub-image/src/: dvbsub.rs  lib.rs  pgs.rs  vobsub.rs
crates/oxideav-subtitle/: Cargo.toml
crates/oxideav-subtitle/src/: aqtitle.rs  ass.rs  codec.rs  compositor.rs  container.rs  ebu_stl.rs  font.rs  ir.rs  jacosub.rs  lib.rs  microdvd.rs  mpl2.rs  mpsub.rs  pjs.rs  realtext.rs  render.rs  sami.rs  srt.rs  subviewer1.rs  subviewer2.rs  transform.rs  ttml.rs  vplayer.rs  webvtt.rs
crates/oxideav-subtitle/tests/: aqtitle_parse.rs  ass_parse.rs  ebu_stl_parse.rs  jacosub_parse.rs  microdvd_parse.rs  mpl2_parse.rs  mpsub_parse.rs  pjs_parse.rs  probe.rs  realtext_parse.rs  render.rs  sami_parse.rs  srt_parse.rs  subviewer1_parse.rs  subviewer2_parse.rs  transform_roundtrip.rs  ttml_parse.rs  vplayer_parse.rs  webvtt_parse.rs
crates/oxideav-tests/: Cargo.toml  README.md
crates/oxideav-tests/tests/: audio_aac.rs  audio_flac.rs  audio_gsm.rs  audio_mp1.rs  audio_mp2.rs  audio_mp3.rs  audio_opus.rs  audio_speex.rs  audio_vorbis.rs  blender_convert.py  mesh3d_blender_assimp_oracle.rs  mesh3d_cross_format_roundtrip.rs  mesh3d_encoder_options_roundtrip.rs  mesh3d_extras_and_skinning_coverage.rs  mesh3d_multi_material_pool_stress.rs  mesh3d_registry_lookup.rs  mesh3d_usdz_apple_oracle.rs  pipeline_parity.rs  pipeline_pix_convert.rs  pipeline_wav_roundtrip.rs  video_ffv1.rs  (+6 more)
crates/oxideav-vp8/: Cargo.toml
crates/oxideav-vp9/: Cargo.toml
crates/oxideav-webp/: Cargo.toml
(+266 files in other folders)
