[workspace]
resolver = "2"
# Every crate under `crates/` is a workspace member — the native
# ones (oxideav-cli, oxideplay, oxideav-tests) and every
# OxideAV/oxideav{,-*} sub-crate cloned by `scripts/update-crates.sh`.
# Globbing keeps the workspace self-contained (no crates.io resolution
# needed for any oxideav-* dep) and means adding a new crate is just
# `scripts/update-crates.sh` away from building locally.
members = ["crates/*"]

[workspace.package]
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-workspace"
homepage = "https://github.com/OxideAV/oxideav-workspace"
authors = ["Mark Karpeles"]
readme = "README.md"

[workspace.dependencies]
# Every per-format codec, container, filter, source driver, and codec-trait
# crate now lives in its own OxideAV/* repository and is cloned into
# `crates/` by `scripts/update-crates.sh`. The `path` entry makes cargo
# use the local copy unconditionally, so the workspace never talks to
# crates.io for any oxideav-* dep. `version` stays pinned at "0.0" so the
# constraint survives a round-trip through `cargo publish`.
oxideav-core = { path = "crates/oxideav-core", version = "0.1" }
oxideav-pipeline = { path = "crates/oxideav-pipeline", version = "0.1" }
oxideav-basic = { path = "crates/oxideav-basic", version = "0.0" }
oxideav-ogg = { path = "crates/oxideav-ogg", version = "0.1" }
oxideav-vorbis = { path = "crates/oxideav-vorbis", version = "0.0" }
oxideav-opus = { path = "crates/oxideav-opus", version = "0.0" }
oxideav-ffv1 = { path = "crates/oxideav-ffv1", version = "0.0" }
oxideav-huffyuv = { path = "crates/oxideav-huffyuv", version = "0.0" }
oxideav-utvideo = { path = "crates/oxideav-utvideo", version = "0.0" }
oxideav-dirac = { path = "crates/oxideav-dirac", version = "0.0" }
oxideav-flac = { path = "crates/oxideav-flac", version = "0.0" }
oxideav-shorten = { path = "crates/oxideav-shorten", version = "0.0" }
oxideav-mkv = { path = "crates/oxideav-mkv", version = "0.0" }
oxideav-mp4 = { path = "crates/oxideav-mp4", version = "0.0" }
oxideav-avi = { path = "crates/oxideav-avi", version = "0.0" }
oxideav-mjpeg = { path = "crates/oxideav-mjpeg", version = "0.1" }
oxideav-cinepak = { path = "crates/oxideav-cinepak", version = "0.0" }
oxideav-mpeg12video = { path = "crates/oxideav-mpeg12video", version = "0.0" }
oxideav-vp9 = { path = "crates/oxideav-vp9", version = "0.0" }
oxideav-h265 = { path = "crates/oxideav-h265", version = "0.0" }
oxideav-h266 = { path = "crates/oxideav-h266", version = "0.0" }
oxideav-h264 = { path = "crates/oxideav-h264", version = "0.1" }
oxideav-av1 = { path = "crates/oxideav-av1", version = "0.1" }
oxideav-h263 = { path = "crates/oxideav-h263", version = "0.0" }
oxideav-h261 = { path = "crates/oxideav-h261", version = "0.0" }
oxideav-vp8 = { path = "crates/oxideav-vp8", version = "0.1" }
oxideav-vp6 = { path = "crates/oxideav-vp6", version = "0.0" }
oxideav-audio-filter = { path = "crates/oxideav-audio-filter", version = "0.1" }
oxideav-image-filter = { path = "crates/oxideav-image-filter", version = "0.1" }
oxideav-pixfmt = { path = "crates/oxideav-pixfmt", version = "0.1" }
oxideav-mpeg4video = { path = "crates/oxideav-mpeg4video", version = "0.1" }
oxideav-msmpeg4 = { path = "crates/oxideav-msmpeg4", version = "0.0" }
oxideav-theora = { path = "crates/oxideav-theora", version = "0.0" }
oxideav-iff = { path = "crates/oxideav-iff", version = "0.0" }
oxideav-mod = { path = "crates/oxideav-mod", version = "0.0" }
oxideav-s3m = { path = "crates/oxideav-s3m", version = "0.0" }
oxideav-mp1 = { path = "crates/oxideav-mp1", version = "0.0" }
oxideav-mp2 = { path = "crates/oxideav-mp2", version = "0.0" }
oxideav-mp3 = { path = "crates/oxideav-mp3", version = "0.1" }
oxideav-id3 = { path = "crates/oxideav-id3", version = "0.0" }
oxideav-aac = { path = "crates/oxideav-aac", version = "0.1" }
oxideav-ac3 = { path = "crates/oxideav-ac3", version = "0.0" }
oxideav-ac4 = { path = "crates/oxideav-ac4", version = "0.0" }
oxideav-celt = { path = "crates/oxideav-celt", version = "0.1" }
oxideav-g7231 = { path = "crates/oxideav-g7231", version = "0.0" }
oxideav-g728 = { path = "crates/oxideav-g728", version = "0.0" }
oxideav-g729 = { path = "crates/oxideav-g729", version = "0.0" }
oxideav-ilbc = { path = "crates/oxideav-ilbc", version = "0.0" }
oxideav-g711 = { path = "crates/oxideav-g711", version = "0.0" }
oxideav-g722 = { path = "crates/oxideav-g722", version = "0.0" }
oxideav-aptx = { path = "crates/oxideav-aptx", version = "0.0" }
oxideav-cook = { path = "crates/oxideav-cook", version = "0.0" }
oxideav-adpcm = { path = "crates/oxideav-adpcm", version = "0.0" }
oxideav-gsm = { path = "crates/oxideav-gsm", version = "0.0" }
oxideav-speex = { path = "crates/oxideav-speex", version = "0.0" }
oxideav-webp = { path = "crates/oxideav-webp", version = "0.1" }
oxideav-gif = { path = "crates/oxideav-gif", version = "0.0" }
oxideav-png = { path = "crates/oxideav-png", version = "0.1" }
oxideav-amv = { path = "crates/oxideav-amv", version = "0.0" }
oxideav-subtitle = { path = "crates/oxideav-subtitle", version = "0.0" }
oxideav-sub-image = { path = "crates/oxideav-sub-image", version = "0.0" }
oxideav-ass = { path = "crates/oxideav-ass", version = "0.0" }
oxideav-prores = { path = "crates/oxideav-prores", version = "0.0" }
oxideav-jpegxl = { path = "crates/oxideav-jpegxl", version = "0.0" }
oxideav-jpeg2000 = { path = "crates/oxideav-jpeg2000", version = "0.0" }
oxideav-avif = { path = "crates/oxideav-avif", version = "0.0" }
oxideav-source = { path = "crates/oxideav-source", version = "0.1" }
oxideav-http = { path = "crates/oxideav-http", version = "0.0" }
oxideav-sysaudio = { path = "crates/oxideav-sysaudio", version = "0.1" }
oxideav-bmp = { path = "crates/oxideav-bmp", version = "0.1" }
oxideav-pbm = { path = "crates/oxideav-pbm", version = "0.0" }
oxideav-svg = { path = "crates/oxideav-svg", version = "0.1" }
oxideav-tiff = { path = "crates/oxideav-tiff", version = "0.0" }
oxideav-ico = { path = "crates/oxideav-ico", version = "0.0" }
oxideav-rtmp = { path = "crates/oxideav-rtmp", version = "0.0" }
oxideav-flv = { path = "crates/oxideav-flv", version = "0.0" }
oxideav-scene = { path = "crates/oxideav-scene", version = "0.1" }
oxideav-cli-convert = { path = "crates/oxideav-cli-convert", version = "0.0" }
oxideav-generator = { path = "crates/oxideav-generator", version = "0.1" }
oxideav-ttf = { path = "crates/oxideav-ttf", version = "0.1" }
oxideav-otf = { path = "crates/oxideav-otf", version = "0.1" }
oxideav-wma = { path = "crates/oxideav-wma", version = "0.0" }
oxideav-scribe = { path = "crates/oxideav-scribe", version = "0.1" }
oxideav-raster = { path = "crates/oxideav-raster", version = "0.1" }
oxideav-wavpack = { path = "crates/oxideav-wavpack", version = "0.0" }
oxideav-pdf = { path = "crates/oxideav-pdf", version = "0.1" }
oxideav-nsf = { path = "crates/oxideav-nsf", version = "0.0" }
oxideav-tga = { path = "crates/oxideav-tga", version = "0.0" }
oxideav-hdr = { path = "crates/oxideav-hdr", version = "0.0" }
oxideav-dds = { path = "crates/oxideav-dds", version = "0.0" }
oxideav-openexr = { path = "crates/oxideav-openexr", version = "0.0" }
oxideav-qoi = { path = "crates/oxideav-qoi", version = "0.0" }
oxideav-farbfeld = { path = "crates/oxideav-farbfeld", version = "0.0" }
oxideav-wbmp = { path = "crates/oxideav-wbmp", version = "0.0" }
oxideav-pcx = { path = "crates/oxideav-pcx", version = "0.0" }
oxideav-icer = { path = "crates/oxideav-icer", version = "0.0" }
oxideav-pict = { path = "crates/oxideav-pict", version = "0.0" }
oxideav-jpegxs = { path = "crates/oxideav-jpegxs", version = "0.0" }
oxideav-evc = { path = "crates/oxideav-evc", version = "0.0" }
oxideav-magicyuv = { path = "crates/oxideav-magicyuv", version = "0.0" }
oxideav-videotoolbox = { path = "crates/oxideav-videotoolbox", version = "0.0" }
oxideav-audiotoolbox = { path = "crates/oxideav-audiotoolbox", version = "0.0" }
oxideav-meta = { path = "crates/oxideav-meta", version = "0.0" }

# The aggregator crate stays in this workspace (it's the "everything
# wired up" entry point for the CLI / player / integration tests).
oxideav = { path = "crates/oxideav", version = "0.0.3" }

thiserror = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1

# Redirect every oxideav-* crates.io dep to the matching `crates/<name>/`
# workspace member. Individual crate Cargo.tomls depend on each other via
# plain `"0.0"` version strings (not `workspace = true`) because each lives
# in its own OxideAV/<name>/ repository; this patch table lets the
# workspace consume all of them from local paths without modifying their
# manifests. Rebuild this block after running
# `scripts/update-crates.sh` for a newly-added crate.
[patch.crates-io]
oxideav-core = { path = "crates/oxideav-core" }
oxideav-pipeline = { path = "crates/oxideav-pipeline" }
oxideav-basic = { path = "crates/oxideav-basic" }
oxideav-ogg = { path = "crates/oxideav-ogg" }
oxideav-vorbis = { path = "crates/oxideav-vorbis" }
oxideav-opus = { path = "crates/oxideav-opus" }
oxideav-ffv1 = { path = "crates/oxideav-ffv1" }
oxideav-huffyuv = { path = "crates/oxideav-huffyuv" }
oxideav-utvideo = { path = "crates/oxideav-utvideo" }
oxideav-dirac = { path = "crates/oxideav-dirac" }
oxideav-flac = { path = "crates/oxideav-flac" }
oxideav-shorten = { path = "crates/oxideav-shorten" }
oxideav-mkv = { path = "crates/oxideav-mkv" }
oxideav-mp4 = { path = "crates/oxideav-mp4" }
oxideav-avi = { path = "crates/oxideav-avi" }
oxideav-mjpeg = { path = "crates/oxideav-mjpeg" }
oxideav-cinepak = { path = "crates/oxideav-cinepak" }
oxideav-mpeg12video = { path = "crates/oxideav-mpeg12video" }
oxideav-vp9 = { path = "crates/oxideav-vp9" }
oxideav-h265 = { path = "crates/oxideav-h265" }
oxideav-h266 = { path = "crates/oxideav-h266" }
oxideav-h264 = { path = "crates/oxideav-h264" }
oxideav-av1 = { path = "crates/oxideav-av1" }
oxideav-h263 = { path = "crates/oxideav-h263" }
oxideav-h261 = { path = "crates/oxideav-h261" }
oxideav-vp8 = { path = "crates/oxideav-vp8" }
oxideav-vp6 = { path = "crates/oxideav-vp6" }
oxideav-audio-filter = { path = "crates/oxideav-audio-filter" }
oxideav-image-filter = { path = "crates/oxideav-image-filter" }
oxideav-pixfmt = { path = "crates/oxideav-pixfmt" }
oxideav-mpeg4video = { path = "crates/oxideav-mpeg4video" }
oxideav-msmpeg4 = { path = "crates/oxideav-msmpeg4" }
oxideav-theora = { path = "crates/oxideav-theora" }
oxideav-iff = { path = "crates/oxideav-iff" }
oxideav-mod = { path = "crates/oxideav-mod" }
oxideav-s3m = { path = "crates/oxideav-s3m" }
oxideav-mp1 = { path = "crates/oxideav-mp1" }
oxideav-mp2 = { path = "crates/oxideav-mp2" }
oxideav-mp3 = { path = "crates/oxideav-mp3" }
oxideav-id3 = { path = "crates/oxideav-id3" }
oxideav-aac = { path = "crates/oxideav-aac" }
oxideav-ac3 = { path = "crates/oxideav-ac3" }
oxideav-ac4 = { path = "crates/oxideav-ac4" }
oxideav-celt = { path = "crates/oxideav-celt" }
oxideav-g7231 = { path = "crates/oxideav-g7231" }
oxideav-g728 = { path = "crates/oxideav-g728" }
oxideav-g729 = { path = "crates/oxideav-g729" }
oxideav-ilbc = { path = "crates/oxideav-ilbc" }
oxideav-g711 = { path = "crates/oxideav-g711" }
oxideav-g722 = { path = "crates/oxideav-g722" }
oxideav-aptx = { path = "crates/oxideav-aptx" }
oxideav-cook = { path = "crates/oxideav-cook" }
oxideav-adpcm = { path = "crates/oxideav-adpcm" }
oxideav-gsm = { path = "crates/oxideav-gsm" }
oxideav-speex = { path = "crates/oxideav-speex" }
oxideav-webp = { path = "crates/oxideav-webp" }
oxideav-gif = { path = "crates/oxideav-gif" }
oxideav-png = { path = "crates/oxideav-png" }
oxideav-amv = { path = "crates/oxideav-amv" }
oxideav-subtitle = { path = "crates/oxideav-subtitle" }
oxideav-sub-image = { path = "crates/oxideav-sub-image" }
oxideav-ass = { path = "crates/oxideav-ass" }
oxideav-prores = { path = "crates/oxideav-prores" }
oxideav-jpegxl = { path = "crates/oxideav-jpegxl" }
oxideav-jpeg2000 = { path = "crates/oxideav-jpeg2000" }
oxideav-avif = { path = "crates/oxideav-avif" }
oxideav-source = { path = "crates/oxideav-source" }
oxideav-http = { path = "crates/oxideav-http" }
oxideav-sysaudio = { path = "crates/oxideav-sysaudio" }
oxideav-bmp = { path = "crates/oxideav-bmp" }
oxideav-pbm = { path = "crates/oxideav-pbm" }
oxideav-svg = { path = "crates/oxideav-svg" }
oxideav-tiff = { path = "crates/oxideav-tiff" }
oxideav-ico = { path = "crates/oxideav-ico" }
oxideav-rtmp = { path = "crates/oxideav-rtmp" }
oxideav-flv = { path = "crates/oxideav-flv" }
oxideav-scene = { path = "crates/oxideav-scene" }
oxideav-cli-convert = { path = "crates/oxideav-cli-convert" }
oxideav-generator = { path = "crates/oxideav-generator" }
oxideav-ttf = { path = "crates/oxideav-ttf" }
oxideav-otf = { path = "crates/oxideav-otf" }
oxideav-wma = { path = "crates/oxideav-wma" }
oxideav-scribe = { path = "crates/oxideav-scribe" }
oxideav-raster = { path = "crates/oxideav-raster" }
oxideav-wavpack = { path = "crates/oxideav-wavpack" }
oxideav-pdf = { path = "crates/oxideav-pdf" }
oxideav-nsf = { path = "crates/oxideav-nsf" }
oxideav-tga = { path = "crates/oxideav-tga" }
oxideav-hdr = { path = "crates/oxideav-hdr" }
oxideav-dds = { path = "crates/oxideav-dds" }
oxideav-openexr = { path = "crates/oxideav-openexr" }
oxideav-qoi = { path = "crates/oxideav-qoi" }
oxideav-farbfeld = { path = "crates/oxideav-farbfeld" }
oxideav-wbmp = { path = "crates/oxideav-wbmp" }
oxideav-pcx = { path = "crates/oxideav-pcx" }
oxideav-icer = { path = "crates/oxideav-icer" }
oxideav-pict = { path = "crates/oxideav-pict" }
oxideav-jpegxs = { path = "crates/oxideav-jpegxs" }
oxideav-evc = { path = "crates/oxideav-evc" }
oxideav-magicyuv = { path = "crates/oxideav-magicyuv" }
oxideav-videotoolbox = { path = "crates/oxideav-videotoolbox" }
oxideav-audiotoolbox = { path = "crates/oxideav-audiotoolbox" }
oxideav-meta = { path = "crates/oxideav-meta" }
