[package]
name = "oxideav-av1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust AV1 (AOMedia Video 1) parser for oxideav — OBU + sequence/frame header parse only"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
