[package]
name = "oxideav-avif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust AVIF (AV1 Image File Format) codec — scaffold (decoder + encoder not yet implemented)"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
