[package]
name = "oxideav-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line frontend for oxideav"
# Released as a prebuilt binary on GitHub Releases (see
# `.github/workflows/release.yml`), not on crates.io. Library users
# pull `oxideav` (the aggregator) directly. Binary tarballs work without
# a Rust toolchain — `cargo install` would defeat that.
publish = false

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "transcoding", "cli", "ffmpeg", "pure-rust"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "oxideav"
path = "src/main.rs"

[features]
default = ["http", "rtmp", "convert", "generator"]
http = ["oxideav/http"]
# Wires `oxideav-rtmp::register` into the source registry at startup so
# the CLI accepts `rtmp://` inputs as a `PacketSource`. Mirrors the
# `http` feature in shape (default-on, no third-party deps because
# oxideav-rtmp itself is std-only).
rtmp = ["dep:oxideav-rtmp"]
convert = ["dep:oxideav-cli-convert"]
# Pulls oxideav-generator's `generate://` source driver and zero-input
# filter factories into the prebuilt registry, plus enables the convert
# verb's shorthand translator (`xc:red`, `synth:5,sine,440`, …).
generator = ["oxideav/generator", "oxideav-cli-convert?/generator"]

[dependencies]
oxideav = { workspace = true }
oxideav-source = { workspace = true }
oxideav-rtmp = { workspace = true, optional = true }
oxideav-cli-convert = { workspace = true, optional = true }
clap = { workspace = true }
