[package]
name = "oxideav-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line frontend for oxideav"
# Released as a prebuilt binary on GitHub Releases (see
# `.github/workflows/release.yml`), not on crates.io. Library users
# pull `oxideav` (the aggregator) directly. Binary tarballs work without
# a Rust toolchain — `cargo install` would defeat that.
publish = false

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "transcoding", "cli", "ffmpeg", "pure-rust"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "oxideav"
path = "src/main.rs"

[features]
default = ["rtmp", "convert"]
# Wires `oxideav-rtmp::register` into the source registry at startup so
# the CLI accepts `rtmp://` inputs as a `PacketSource`. (rtmp doesn't
# self-register via the linkme slice yet — eventual followup.)
rtmp = ["dep:oxideav-rtmp"]
convert = ["dep:oxideav-cli-convert"]

[dependencies]
# Thin facade — `oxideav` is no longer an aggregator. It just walks the
# linkme distributed slice that `oxideav-format-all` populates on link.
oxideav = { workspace = true }
# Pulls in every codec / container / filter / source crate so they
# self-register into `oxideav_core::REGISTRARS`. Replaces the historical
# umbrella feature flags entirely.
oxideav-format-all = { workspace = true }
oxideav-source = { workspace = true }
oxideav-rtmp = { workspace = true, optional = true }
oxideav-cli-convert = { workspace = true, optional = true }
clap = { workspace = true }
log = { workspace = true, features = ["std"] }

[dev-dependencies]
# Integration tests that synthesise a multi-stream MKV input file at
# test-runtime (no fixture files, no ffmpeg dependency) — see
# `tests/transcode_multi_stream.rs`. Used directly to construct
# StreamInfo + a Muxer, which is far less ceremony than driving a
# fresh job through the executor.
oxideav-core = { workspace = true }
oxideav-mkv = { workspace = true }
oxideav-basic = { workspace = true }
