[package]
name = "oxideav-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types for oxideav: timestamps, packets, frames, media formats"

[dependencies]
thiserror = { workspace = true }
