[package]
name = "oxideav-ffv1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust FFV1 (RFC 9043) lossless intra-only video codec for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
