[package]
name = "oxideav-h263"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust ITU-T H.263 baseline video decoder for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-mpeg4video = { workspace = true }
