[package]
name = "oxideav-h264"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust H.264 / AVC (ITU-T H.264 | ISO/IEC 14496-10) decoder for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }

[dev-dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
