[package]
name = "oxideav-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "JSON-based transcode job graph for oxideav"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-source = { workspace = true }
oxideav-pipeline = { workspace = true }
oxideav-audio-filter = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[features]
default = ["audio_filter"]
audio_filter = ["dep:oxideav-audio-filter"]

[dev-dependencies]
oxideav-basic = { workspace = true }
