[package]
name = "oxideav-jpeg2000"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust JPEG 2000 (J2K / JP2) codec — scaffold (decoder + encoder not yet implemented)"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
